testsuite/invalid-types/call1.qc
void(float, string, entity) fun = #1;

void() main = {
	local float x;
	fun(x, x, x);
};
